bk_ida/gccida/c0/pedwarn_with_decl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pedwarn_with_decl/src/diagnostic.c:1479:50: error: expected expression
diagnostic_for_decl( decla, msgida, ( va_list_0 *)ap, flag_pedantic_errors == 0); 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pedwarn_with_decl/src/diagnostic.c:1479:39: error: use of undeclared identifier 'va_list_0'
diagnostic_for_decl( decla, msgida, ( va_list_0 *)ap, flag_pedantic_errors == 0); 
                                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pedwarn_with_decl/src/obj/diagnostic.o] Error 1
